--- a/day2/css/styles.css
+++ b/day2/css/styles.css
@@ -29,19 +29,37 @@ body {
   overflow: hidden;
 }
 
-.center {
+.frame .center {
+  position: relative;
+  width: 100px;
+  height: 100px;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.bar {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 80px;
+  height: 8px;
+  background: #fff;
+  border-radius: 4px;
+  box-shadow: 1px 2px 10px 0px rgba(0, 0, 0, 0.3);
+  opacity: 1;
+  transition: transform 200ms, opacity 200ms;
 }
 
-.line1,
-.line2,
-.line3 {
-  width: 100px;
-  height: 10px;
-  background-color: white;
-  margin-bottom: 10px;
-  border-radius: 4px;
+.bar:first-of-type {
+  transform: translate(-50%, -300%);
+}
+
+.bar:last-of-type {
+  transform: translate(-50%, 200%);
 }
