--- a/day4/css/styles.css
+++ b/day4/css/styles.css
@@ -1,5 +1,3 @@
-$bezier: cubic-bezier(0.21, 0.98, 0.6, 0.99);
-
 .frame {
   position: absolute;
   top: 50%;
@@ -10,7 +8,7 @@ $bezier: cubic-bezier(0.21, 0.98, 0.6, 0.99);
   margin-left: -200px;
   border-radius: 2px;
   box-shadow: 1px 2px 10px 0px rgba(0, 0, 0, 0.3);
-  background: #e56262;
+  background: #E56262;
   color: #fff;
 }
 
@@ -32,7 +30,7 @@ $bezier: cubic-bezier(0.21, 0.98, 0.6, 0.99);
   background: #fff;
   border-radius: 50%;
   animation-fill-mode: both;
-  animation: jump-jump-1 2s $bezier infinite alternate;
+  animation: jump-jump-1 2s cubic-bezier(0.99, 0.92, 0.92, 0.92) infinite alternate;
 }
 
 .dot-2 {
@@ -45,7 +43,7 @@ $bezier: cubic-bezier(0.21, 0.98, 0.6, 0.99);
   background: #fff;
   border-radius: 50%;
   animation-fill-mode: both;
-  animation: jump-jump-2 2s $bezier infinite alternate;
+  animation: jump-jump-2 2s cubic-bezier(0.99, 0.92, 0.92, 0.92) infinite alternate;
 }
 
 .dot-3 {
@@ -58,44 +56,38 @@ $bezier: cubic-bezier(0.21, 0.98, 0.6, 0.99);
   background: #fff;
   border-radius: 50%;
   animation-fill-mode: both;
-  animation: jump-jump-3 2s $bezier infinite alternate;
+  animation: jump-jump-3 2s cubic-bezier(0.99, 0.92, 0.92, 0.92) infinite alternate;
 }
 
 @keyframes jump-jump-1 {
-  0%,
-  70% {
+  0%, 70% {
     box-shadow: 2px 2px 3px 2px rgba(0, 0, 0, 0.2);
     transform: scale(0);
   }
-
   100% {
     box-shadow: 10px 10px 15px 0 rgba(0, 0, 0, 0.3);
     transform: scale(1);
   }
 }
-
 @keyframes jump-jump-2 {
-  0%,
-  40% {
+  0%, 40% {
     box-shadow: 2px 2px 3px 2px rgba(0, 0, 0, 0.2);
     transform: scale(0);
   }
-
   100% {
     box-shadow: 10px 10px 15px 0 rgba(0, 0, 0, 0.3);
     transform: scale(1);
   }
 }
-
 @keyframes jump-jump-3 {
-  0%,
-  10% {
+  0%, 10% {
     box-shadow: 2px 2px 3px 2px rgba(0, 0, 0, 0.2);
     transform: scale(0);
   }
-
   100% {
     box-shadow: 10px 10px 15px 0 rgba(0, 0, 0, 0.3);
     transform: scale(1);
   }
 }
+
+/*# sourceMappingURL=styles.css.map */
