--- a/day1/css/styles.css
+++ b/day1/css/styles.css
@@ -1,95 +1,85 @@
 .frame {
 	position: absolute;
-	top: 50%;
 	left: 50%;
+	top: 50%;
 	width: 400px;
 	height: 400px;
 	margin-top: -200px;
 	margin-left: -200px;
 	border-radius: 2px;
-	box-shadow: 1px 2px 10px 0px rgba(0, 0, 0, 0.3);
-  background: #43389F;
-  background: -webkit-linear-gradient(bottom left, #43389F 0%, #4ec6ca 100%);
-  background: -moz-linear-gradient(bottom left, #43389F 0%, #4ec6ca 100%);
-  background: -o-linear-gradient(bottom left, #43389F 0%, #4ec6ca 100%);
-  background: linear-gradient(to top right, #43389F 0%, #4ec6ca 100%); 
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#43389F', endColorstr='#4ec6ca',GradientType=1 ); 
-  font-family: 'Courier New', 'Courier', sans-serif;
-  color: #fff;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-.center {
-	position: relative;
-	top: 50.8%;
-	left: 50.5%;
-	transform: translate(-50%, -50%);
+	box-shadow: 1px 2px 10px 0 rgba(0, 0, 0, 0.3);
+	background: navy;
+	background: linear-gradient(45deg, rgba(3, 3, 161, 0.952), rgb(27, 205, 232));
+	font-family: 'Courier New', Courier, sans-serif;
+	color: #fff;
 
 	display: flex;
 	flex-direction: column;
+	justify-content: center;
+}
+
+.container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 10px;
 }
 
 .number {
 	position: relative;
 	height: 100px;
-	width: 200px;
+	width: auto;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
 
-  .one-one {
-    position: absolute;
-    z-index: 1;
-    top: 0;
-    left: -16px;
-    height: 40px;
-    width: 20px;
-    background: #fff;
-    border-radius: 3px;
-    transform: rotate(50deg);
-    box-shadow: 0 0 13px 0 rgba(0,0,0,0.2);
-  }
+	.one-one {
+		/* position: absolute; */
+		/* z-index: 1; */
+		top: 0px;
+		left: -16px;
+		width: 20px;
+		height: 40px;
+		background: #fff;
+		transform: rotate(50deg);
+		box-shadow: 0 0 13px 0 rgba(0, 0, 0, 0.3);
+	}
 
-  .one-two {
-    position: absolute;
-    z-index: 10;
-    top: 0;
-    left: 0px;
-    height: 100px;
-    width: 24px;
-    background: #fff;
-    border-radius: 3px;
-    box-shadow: 0 0 13px 0 rgba(0,0,0,0.2);
-  }
-
+	.one-two {
+		/* position: absolute; */
+		/* z-index: 10; */
+		top: 0px;
+		left: 0px;
+		width: 24px;
+		height: 100px;
+		background-color: #fff;
+		box-shadow: 0 0 13px 0 rgba(0, 0, 0, 0.3);
+	}
 
 	.zero-one,
 	.zero-two {
-		position: absolute;
-		z-index: 8;
-		top: 0;
-		left: 17px;
+		/* position: absolute; */
+		/* z-index: 8; */
+		/* top: 0px;
+		left: 17px; */
 		box-sizing: border-box;
-		height: 100px;
 		width: 100px;
+		height: 100px;
 		border-radius: 50%;
 		border: 24px solid #fff;
-		box-shadow: 0 0 13px 0 rgba(0, 0, 0, 0.2);
+		box-shadow: 0 0 13px 0 rgba(0, 0, 0, 0.3);
 	}
 
 	.zero-two {
-		z-index: 6;
-		left: 100px;
+		/* left: 100px; */
+		/* z-index: 6; */
 	}
 }
 
-.center {
-	position: absolute;
-	top: 50.8%;
-	left: 50.5%;
-	transform: translate(-50%, -50%);
-}
-
-.big {
+.big-text {
 	position: relative;
+	top: 0px;
 	z-index: 20;
 	display: block;
 	font-size: 82px;
@@ -99,13 +89,14 @@
 	margin-top: 6px;
 }
 
-.small {
+.small-text {
 	position: relative;
+	top: 0px;
 	z-index: 20;
 	display: block;
-	font-size: 23px;
-	line-height: 20px;
+	font-size: 25px;
+	line-height: 12px;
 	text-transform: uppercase;
 	font-weight: 700;
-	letter-spacing: 0.04em;
+	margin-top: 6px;
 }
