--- a/day16/css/styles.scss
+++ b/day16/css/styles.scss
@@ -28,134 +28,30 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-.center {
+.blobb {
   position: absolute;
-  width: 300px;
-  height: 260px;
-  top: 70px;
-  left: 50px;
-  background-color: #fff;
-  box-shadow: 8px 10px 15px 0 rgba(0, 0, 0, 0.2);
-  border-radius: 3px;
-  position: relative;
-}
-.title {
-  font-size: 16px;
-  color: #676767;
-  line-height: 50px;
-  height: 50px;
-  border-bottom: 1px solid #d8d8d8;
-  text-align: center;
-}
-.dropzone {
-  position: absolute;
-  z-index: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100px;
-  height: 80px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  border: 1px dashed #a4a4a4;
-  border-radius: 3px;
-  text-align: center;
-  overflow: hidden;
 }
-.dropzone.is-dragover {
-  border-color: #666;
-  background-color: #eee;
-}
-.upload {
-  margin: 6px 0 0 2px;
-}
-.filename {
-  display: block;
-  color: #676767;
-  font-size: 14px;
-  line-height: 18px;
-}
-.input {
+
+.blobb-ring {
   position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  opacity: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
-.upload-btn {
+
+.triangle {
   position: absolute;
-  width: 140px;
-  height: 40px;
-  left: 80px;
-  bottom: 24px;
-  background-color: #6ece3b;
-  cursor: pointer;
-  text-align: center;
-  border-radius: 3px;
-  line-height: 40px;
-  font-size: 14px;
-  box-shadow: 0 2px 0 0 #498c25;
-  transition: all 0.2s ease-in-out;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
-.upload-btn:hover {
-  box-shadow: 0 2px 0 0 #498c25, 0 2px 10px 0 #6ece3b;
-}
-.bar {
+
+.triangle-sparkles {
   position: absolute;
-  z-index: 1;
-  width: 300px;
-  height: 3px;
-  top: 49px;
-  left: 0;
-  background-color: #6ece3b;
-  transition: all 3s ease-out;
-  transform: scaleX(0);
-  transform-origin: 0 0;
-}
-.bar.active {
-  transform: scaleX(2) scaleY(20) translate3d(0, 0, 0);
-}
-.syncing {
-  position: absolute;
-  top: 109px;
-  left: 134px;
-  opacity: 0;
-}
-.syncing.active {
-  animation: syncing 3.2s ease-in-out;
-}
-@keyframes syncing {
-  0% {
-    transform: rotate(0deg);
-  }
-  10% {
-    opacity: 1;
-  }
-  90% {
-    opacity: 1;
-  }
-  100% {
-    transform: rotate(360deg);
-    opacity: 0;
-  }
-}
-.done {
-  position: absolute;
-  top: 112px;
-  left: 132px;
-  opacity: 0;
-}
-.done.active {
-  animation: done 0.5s ease-in 3.2s;
-  animation-fill-mode: both;
-}
-@keyframes done {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
