--- a/day16/css/styles.scss
+++ b/day16/css/styles.scss
@@ -53,5 +53,9 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
+  width: 100%;
+  height: 100%;
   transform: translate(-50%, -50%);
 }
+
+
